--- a/template/header.html
+++ b/template/header.html
@@ -1,3 +1,28 @@
-<div class="header__inner">
-    <h2>Header Content</h2>
+<div class="top-bar">
+    <div class="header__left">
+        <div class="logo">
+            <img src="./assets/img/logo.png" alt="Grocerymart" />
+        </div>
+        <nav class="navbar">
+            <ul>
+                <li>
+                    <a class="navbar__link" href="#!"
+                        >Departments
+                        <img src="./assets/img/arrowdown.svg" alt="" />
+                    </a>
+                </li>
+                <li>
+                    <a class="navbar__link" href="#!"
+                        >Grocery<img src="./assets/img/arrowdown.svg" alt=""
+                    /></a>
+                </li>
+                <li>
+                    <a class="navbar__link" href="#!"
+                        >Beauty<img src="./assets/img/arrowdown.svg" alt=""
+                    /></a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="header__right"></div>
 </div>
