--- a/template/header.html
+++ b/template/header.html
@@ -6,20 +6,13 @@
         <nav class="navbar">
             <ul>
                 <li>
-                    <a class="navbar__link" href="#!"
-                        >Departments
-                        <img src="./assets/img/arrowdown.svg" alt="" />
-                    </a>
+                    <a class="navbar__link" href="#!">Departments</a>
                 </li>
                 <li>
-                    <a class="navbar__link" href="#!"
-                        >Grocery<img src="./assets/img/arrowdown.svg" alt=""
-                    /></a>
+                    <a class="navbar__link" href="#!">Grocery</a>
                 </li>
                 <li>
-                    <a class="navbar__link" href="#!"
-                        >Beauty<img src="./assets/img/arrowdown.svg" alt=""
-                    /></a>
+                    <a class="navbar__link" href="#!">Beauty</a>
                 </li>
             </ul>
         </nav>
