--- a/assets/css/layout/header.css
+++ b/assets/css/layout/header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #eeeeee;
+    background-color: var(--header--bg-color);
 }
 
 .header__inner {
@@ -7,23 +7,36 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
+}
+
+.header-pc .logo {
+    width: 190px;
+    height: 32px;
+}
+
+.header-pc .logo img {
+    width: 100%;
 }
 
 .header__left {
     display: flex;
     align-items: center;
-    gap: 144px;
+    width: 70%;
 }
 
-.logo {
-    width: 190px;
-    height: 32px;
+.navbar {
+    margin-left: 144px;
 }
 
-.navbar ul {
+.navbar__list {
     display: flex;
     align-items: center;
     gap: 30px;
+}
+
+.navbar__item {
+    display: flex;
 }
 
 .navbar img {
@@ -34,6 +47,7 @@
 .header__right {
     display: flex;
     align-items: center;
+    justify-content: end;
     gap: 20px;
 }
 
@@ -43,21 +57,31 @@
     gap: 10px;
     padding: 13px;
     border-radius: 8px;
-    background: #fff;
-    box-shadow: 0px 20px 60px 10px rgba(237, 237, 246, 0.2);
+    background: var(--icon--bg);
+    box-shadow: var(--icon--box-shadow);
 }
 
-.icon__group--title span {
+.icon__group--title {
     color: var(--second--color);
     font-size: 1.5rem;
     font-weight: 500;
-    line-height: 2.2rem; /* 146.667% */
+    line-height: 146.667%;
+    margin-left: 10px;
+}
+
+.icon__group a {
+    display: flex;
+    align-items: center;
+}
+
+.icon {
+    filter: var(--icon--color);
 }
 
 .divide {
     width: 1px;
-    height: 30px;
-    background: #ededf6;
+    height: 20px;
+    background: var(--divide--color);
     margin: 0 10px;
 }
 
@@ -65,9 +89,46 @@
     width: 50px;
     height: 50px;
     border-radius: 8px;
-    box-shadow: 0px 4px 14px 2px rgba(0, 0, 0, 0.08);
+    background: var(--icon--bg);
+    box-shadow: var(--avatar--box-shadow);
 }
 
 .header__right .avatar img {
+    width: 100%;
+}
+
+/* MENU MOBILE */
+.header-mobile {
+    padding: 16px;
+}
+
+.mobile-menu {
+    width: 24px;
+    height: 24px;
+    padding: 4px 6px;
+}
+
+.mobile-menu img {
+    width: 100%;
+}
+
+.header-mobile .logo {
+    width: 151px;
+    height: 25px;
+}
+
+.header-mobile .logo img {
+    width: 100%;
+}
+
+.header-mobile .avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 8px;
+    background: var(--icon--bg);
+    box-shadow: var(--avatar--box-shadow);
+}
+
+.header-mobile .avatar img {
     width: 100%;
 }
