--- a/templates/header.html
+++ b/templates/header.html
@@ -1,72 +1,98 @@
 <div class="container">
-    <div class="header__inner">
+    <!-- PC MENU -->
+    <div class="header__inner header-pc hide-mobile">
         <div class="header__left">
-            <figure>
-                <img
-                    src="./assets/img/logo/logo.png"
-                    alt="main logo"
-                    class="logo"
-                />
-            </figure>
+            <div class="logo">
+                <figure>
+                    <img src="./assets/img/logo/logo.png" alt="main logo" />
+                </figure>
+            </div>
 
             <nav class="navbar">
-                <ul>
-                    <li>
+                <ul class="navbar__list">
+                    <li class="navbar__item">
                         <a href="#!"
                             >Departments
                             <img
                                 src="./assets/img/icon/arrowdown.svg"
                                 alt="arrowdown"
+                                class="icon"
                             />
                         </a>
                     </li>
-                    <li>
+                    <li class="navbar__item">
                         <a href="#!"
                             >Grocery
                             <img
                                 src="./assets/img/icon/arrowdown.svg"
                                 alt="arrowdown"
+                                class="icon"
                             />
                         </a>
                     </li>
-                    <li>
+                    <li class="navbar__item">
                         <a href="#!"
                             >Beauty
                             <img
                                 src="./assets/img/icon/arrowdown.svg"
                                 alt="arrowdown"
+                                class="icon"
                             />
                         </a>
                     </li>
                 </ul>
             </nav>
         </div>
+
         <div class="header__right">
             <div class="icon__group">
-                <img
-                    src="./assets/img/icon/search.svg"
-                    alt="Search items"
-                    class="icon__group--icon"
-                />
+                <a href="#!"
+                    ><img
+                        src="./assets/img/icon/search.svg"
+                        alt="Search items"
+                        class="icon"
+                /></a>
             </div>
             <div class="icon__group">
-                <img
-                    src="./assets/img/icon/heart.svg"
-                    alt="Search items"
-                    class="icon__group--icon"
-                />
-                <span class="icon__group--title">03</span>
+                <a href="#!"
+                    ><img
+                        src="./assets/img/icon/heart.svg"
+                        alt="Search items"
+                        class="icon"
+                    />
+                    <span class="icon__group--title">03</span></a
+                >
+
                 <div class="divide"></div>
-                <img
-                    src="./assets/img/icon/cart.svg"
-                    alt="Search items"
-                    class="icon__group--icon"
-                />
-                <span class="icon__group--title">$65.42</span>
+                <a href="#!"
+                    ><img
+                        src="./assets/img/icon/cart.svg"
+                        alt="Search items"
+                        class="icon"
+                    />
+                    <span class="icon__group--title">$65.42</span></a
+                >
             </div>
             <div class="avatar">
                 <img src="./assets/img/avatar.png" alt="" />
             </div>
+        </div>
+    </div>
+
+    <!-- MOBILE MENU -->
+    <div class="header__inner header-mobile hide-pc">
+        <div class="mobile-menu">
+            <img src="./assets/img/icon/mobile-menu.svg" alt="mobile menu" />
+        </div>
+
+        <div class="logo">
+            <figure>
+                <img src="./assets/img/logo/logo.png" alt="main logo" />
+            </figure>
+        </div>
+
+        <div class="avatar">
+            <img src="./assets/img/avatar.png" alt="" />
         </div>
     </div>
 </div>
