--- a/assets/css/themes/dark.css
+++ b/assets/css/themes/dark.css
@@ -8,4 +8,11 @@ html.dark {
     --icon--box-shadow: 0px 20px 60px 10px rgba(0, 0, 0, 0.2);
     --divide--color: #ededf6;
     --avatar--box-shadow: 0px 4px 14px 2px rgba(0, 0, 0, 0.08);
+    --header-mobile-bg-color: #171c28;
+}
+
+@media (max-width: 991.98px) {
+    .header {
+        background-color: var(--header-mobile-bg-color) !important;
+    }
 }
