--- a/assets/css/themes/light.css
+++ b/assets/css/themes/light.css
@@ -8,4 +8,11 @@
     --icon--box-shadow: 0px 20px 60px 10px rgba(237, 237, 246, 0.2);
     --divide--color: #ededf6;
     --avatar--bx-shadow: 0px 4px 14px 2px rgba(0, 0, 0, 0.08);
+    --header-mobile-bg-color: #fff;
+}
+
+@media (max-width: 991.98px) {
+    .header {
+        background-color: var(--header-mobile-bg-color) !important;
+    }
 }
