--- a/templates/header.html
+++ b/templates/header.html
@@ -81,7 +81,7 @@
 
     <!-- MOBILE MENU -->
     <div class="header__inner header-mobile hide-pc">
-        <div class="mobile-menu">
+        <div class="mobile-menu icon">
             <img src="./assets/img/icon/mobile-menu.svg" alt="mobile menu" />
         </div>
 
