header update css

--- a/templates/header.html
+++ b/templates/header.html
@@ -19,6 +19,19 @@
                                 class="icon"
                             />
                         </a>
+                        <!-- DROPDOWN -->
+                        <div class="dropdown">
+                            <div class="dropdown__inner">
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur
+                                    adipisicing elit. Recusandae officiis sequi
+                                    debitis eligendi sint molestias harum
+                                    quibusdam eaque ad, placeat nobis asperiores
+                                    repellendus numquam tempore, a quidem
+                                    necessitatibus quam provident.
+                                </p>
+                            </div>
+                        </div>
                     </li>
                     <li class="navbar__item">
                         <a href="#!"
