--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -12,6 +12,8 @@ html {
 body {
     font-size: 1.6rem;
     font-family: Gordita, sans-serif;
+    color: var(--second--color);
+    background-color: var(--body-color);
 }
 
 /* COMMON */
