--- a/assets/css/layout/header.css
+++ b/assets/css/layout/header.css
@@ -3,6 +3,7 @@
 }
 
 .header__inner {
+    position: relative;
     padding: 30px 0;
     display: flex;
     align-items: center;
@@ -36,7 +37,11 @@
 }
 
 .navbar__item {
-    display: flex;
+    cursor: pointer;
+}
+
+.navbar__item:hover .dropdown__inner {
+    display: block;
 }
 
 .navbar img {
@@ -131,4 +136,18 @@
 
 .header-mobile .avatar img {
     width: 100%;
+}
+
+/* DROPDOWN */
+.dropdown {
+    position: absolute;
+    padding-top: 80px;
+    left: 0;
+}
+.dropdown__inner {
+    display: none;
+    padding: 30px;
+    border-radius: 20px;
+    background: var(--dropdown-bg-menu-pc);
+    box-shadow: var(--dropdown-box-shadow-menu-pc);
 }
