--- a/assets/css/themes/dark.css
+++ b/assets/css/themes/dark.css
@@ -2,13 +2,14 @@ html.dark {
     --second--color: #fff;
     --icon--color: invert(100%) sepia(0%) saturate(0%) hue-rotate(136deg)
         brightness(102%) contrast(100%);
-    --header--bg-color: #171c28;
     --main--bg-color: #292e39;
     --icon--bg: #292e39;
     --icon--box-shadow: 0px 20px 60px 10px rgba(0, 0, 0, 0.2);
     --divide--color: #ededf6;
     --avatar--box-shadow: 0px 4px 14px 2px rgba(0, 0, 0, 0.08);
+    --header--bg-color: #171c28;
     --header-mobile-bg-color: #171c28;
+    --body-color: #292e39;
 }
 
 @media (max-width: 991.98px) {
