--- a/assets/css/themes/light.css
+++ b/assets/css/themes/light.css
@@ -2,13 +2,18 @@
     --second--color: #1a162e;
     --icon--color: invert(11%) sepia(42%) saturate(660%) hue-rotate(210deg)
         brightness(91%) contrast(102%);
-    --header--bg-color: #eeeeee;
     --main--bg-color: #f6f6f6;
     --icon--bg: #fff;
     --icon--box-shadow: 0px 20px 60px 10px rgba(237, 237, 246, 0.2);
     --divide--color: #ededf6;
     --avatar--bx-shadow: 0px 4px 14px 2px rgba(0, 0, 0, 0.08);
+    --header--bg-color: #eeeeee;
     --header-mobile-bg-color: #fff;
+    --body-color: #f6f6f6;
+
+    /* DROPDOWN */
+    --dropdown-bg-menu-pc: #fff;
+    --dropdown-box-shadow-menu-pc: 0px 40px 90px 20px rgba(200, 200, 200, 0.4);
 }
 
 @media (max-width: 991.98px) {
